Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -235,23 +235,23 @@ To better understand the success of IS we will have a look at two models. The te
     \label{fig:enter-label}
 \end{figure}
 \\
-Looking at the TAM two determinants influence the use of an IS - the \textit{perceived usefulness} (PU) and the \textit{perceived ease of use} (PEU) \parencite{Davis1989}. Both are influenced by external variables \parencite{Davis1989}. The PU describes the degree to which a person believes that using a particular system would be beneficial to them \parencite{Davis1989}. In an enterprise context this usually means the conviction that the use of the IS has a beneficial influence on the own job performance. The second determinant, the \textit{perceived ease of use} (PEU), refers to "the degree to which a person believes that using a particular system would be free of effort" \parencite[p.~320]{Davis1989}. This idea relates to the user's estimation of the mental effort required to learn and operate the system. If a system is intuitive, straightforward and does not require extensive training to use, it will be perceived as easy to use.\\ A crucial aspect of the TAM is the relationship between these two determinants. Davis argues that the PEU has a direct, positive influence on the PU. A system that is easier to use is also perceived as more useful, partly because the user can invest less effort in the mechanics of using the system and more in the actual task at hand. Both PU and PEU then influence the user's \textit{attitude toward using} the system, which in turn shapes the \textit{behavioral intention to use} and ultimately leads to the \textit{actual system use}. However, it is important to note that a consistent finding in TAM research is that PU has a significantly stronger influence on usage intention and actual use than PEU \parencite{Davis1989}. While ease of use is important, the ultimate driver for acceptance is the user's belief that the system will help them perform their job better.\\
+Looking at the TAM two determinants influence the use of an IS - the \textit{perceived usefulness} (PU) and the \textit{perceived ease of use} (PEU) \parencite{Davis1989}. Both are influenced by external variables \parencite{Davis1989}. The PU describes the degree to which a person believes that using a particular system would be beneficial to them \parencite{Davis1989}. In an enterprise context this usually means the conviction that the use of the IS has a beneficial influence on the own job performance. The second determinant, the \textit{perceived ease of use} (PEU), refers to "the degree to which a person believes that using a particular system would be free of effort" \parencite[p.~320]{Davis1989}. This idea relates to the user's estimation of the mental effort required to learn and operate the system. If a system is intuitive, straightforward and does not require extensive training to use, it will be perceived as easy to use.\\ A crucial aspect of the TAM is the relationship between these two determinants. Davis argues that the PEU has a direct, positive influence on the PU \parencite{Davis1989}. A system that is easier to use is also perceived as more useful, partly because the user can invest less effort in the mechanics of using the system and more in the actual task at hand. Both PU and PEU then influence the user's \textit{attitude toward using} the system, which in turn shapes the \textit{behavioral intention to use} and ultimately leads to the \textit{actual system use}. However, it is important to note that a consistent finding in TAM research is that PU has a significantly stronger influence on usage intention and actual use than PEU \parencite{Davis1989}. While ease of use is important, the ultimate driver for acceptance is the user's belief that the system will help them perform their job better.\\
 \\
 Now that we know which factors lead to the use of an IS by a single person, we will shift our perspective to the factors that determine its use and overall success within an organizational context.
-Following DeLone and McLean \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} there are 6 interrelated factors that determine the success of an IS in an organizational context: \textit{system quality, information quality, service quality, intention to use and actual system use, user satisfaction and the net benefits} of the IS.\\
+Following \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} 6 interrelated factors determine the success of an IS in an organizational context: \textit{system quality, information quality, service quality, intention to use and actual system use, user satisfaction and the net benefits} of the IS.\\
 \begin{figure}[h!]
     \includegraphics[width=1\linewidth]{images/ISSuccess.png}
     \caption{IS Success Model}
     \label{fig:enter-label}
 \end{figure}
 \\
-\textit{System quality} means the quality of the IS in terms of technical performance. Typical measures for system quality would be, for example, response time, reliability, ease of use, or hardware utilization.\\
-\textit{Information quality} refers to the quality of the information provided by the IS. This includes, for example, the usefulness, timeliness, precision, completeness, and relevance of the information provided by the system.\\
-\textit{Service quality} means the quality of the support that users receive from the IS department or service provider. It became an important success dimension with the rise of end-user computing, where IS providers needed to provide services in addition to making them usable. This dimension is often measured by the support staff's responsiveness, assurance, and empathy.
+\textit{System quality} means the quality of the IS in terms of technical performance \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. Typical measures for system quality would be, for example, response time, reliability, ease of use, or hardware utilization.\\
+\textit{Information quality} refers to the quality of the information provided by the IS \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. This includes, for example, the usefulness, timeliness, precision, completeness, and relevance of the information provided by the system.\\
+\textit{Service quality} means the quality of the support that users receive from the IS department or service provider \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. It became an important success dimension with the rise of end-user computing, where IS providers needed to provide services in addition to making them usable. This dimension is often measured by the support staff's responsiveness, assurance, and empathy.
 \\
-These three aspects of the quality of an information system directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction}. Here, it is important to differentiate between the two concepts of use. \textit{Intention to use} is an attitudinal measure, representing a user's plan to engage with a system. In contrast, \textit{system use} is a behavioral measure of the actual interaction, captured by metrics like frequency, duration, or the breadth of features used. This distinction is particularly crucial in an enterprise context. For a system where use is voluntary, a user's intention is a strong predictor of their actual use. However, if a system's use is mandatory, simply measuring that it is being used is not very meaningful, because the system has to be used anyway. In that scenario, assessing the nature of the use (e.g., are users leveraging advanced features?) or their underlying intention to use the system properly becomes a more telling indicator of true acceptance and success
-\parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. Both use and intention are linked with \textit{user satisfaction}. A positive experience during system use leads to higher satisfaction, which in turn reinforces the intention for continued and more extensive use in the future. In an organizational context, this user satisfaction is heavily influenced by the system's perceived impact on job performance, such as an increase in productivity. Therefore, the combination of active system use and high user satisfaction is what generates \textit{net benefits}.\\
-This process, however, is not a one-way street. The model includes a crucial feedback loop: the \textit{net benefits} that users perceive will in turn influence their future \textit{user satisfaction} and \textit{intention to use}. When users see that a system is delivering real value, it reinforces their positive attitude towards the system. This creates a virtuous cycle, where a successful system's value is constantly reinforced and grows over time.\\
+These three aspects of the quality of an information system directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction} \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. Here, it is important to differentiate between the two concepts of use. \textit{Intention to use} is an attitudinal measure, representing a user's plan to engage with a system \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. In contrast, \textit{system use} is a behavioral measure of the actual interaction, captured by metrics like frequency, duration, or the breadth of features used. This distinction is particularly crucial in an enterprise context. For a system where use is voluntary, a user's intention is a strong predictor of their actual use. However, if a system's use is mandatory, simply measuring that it is being used is not very meaningful, because the system has to be used anyway. In that scenario, assessing the nature of the use (e.g., are users leveraging advanced features?) or their underlying intention to use the system properly becomes a more telling indicator of true acceptance and success
+\parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. Both use and intention are linked with \textit{user satisfaction}. A positive experience during system use leads to higher satisfaction, which in turn reinforces the intention for continued and more extensive use in the future \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. In an organizational context, this user satisfaction is heavily influenced by the system's perceived impact on job performance, such as an increase in productivity. Therefore, the combination of active system use and high user satisfaction is what generates \textit{net benefits} \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}.\\
+This process, however, is not a one-way street. The model includes a crucial feedback loop: the \textit{net benefits} that users perceive will in turn influence their future \textit{user satisfaction} and \textit{intention to use} \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. When users see that a system is delivering real value, it reinforces their positive attitude towards the system. This creates a virtuous cycle, where a successful system's value is constantly reinforced and grows over time.\\
 
 The Technology Acceptance Model (TAM) and the Information Systems Success Model (ISSM) address the same fundamental questions but from two different perspectives. The TAM focuses on the individual user, suggesting that a person will use a system more often if it provides value (\textit{perceived usefulness}) and is easy to operate (\textit{perceived ease of use}).
 The ISSM, on the other hand, argues from a company's perspective. It concludes that three quality dimensions influence system success: \textit{information quality}, \textit{system quality}, and \textit{service quality}. These dimensions impact both \textit{user satisfaction} and \textit{ intention to use}, which drives \textit{actual system use}. Overall, the two models appear to be quite parallel to each other as both implement factors like how simple a system is to use and how beneficial the use is.
@@ -262,15 +262,15 @@ For this thesis, the ISSM provides a more practical framework. It offers specifi
 \section{Knowledge Management System's success}
 Now that we have a solid understanding of IS acceptance and success in general we are going to have a closer look at knowledge management systems (KMS). We'll start of with some definitions that will help us understand what knowledge, knowledge management (KM) and knowledge management systems (KMS) are. "Knowledge is a fluid mix of framed experience, values, contextual information, and expert insight that provides a framework for
 evaluating and incorporating new experiences and information" \parencite[p.~15]{Davenport}. This means that knowledge is a key factor in decision-making processes, e.g., in enterprises. KM on the other hand "[...] is the practice of selectively applying knowledge from previous experiences of decision making to current and future decision making activities with the express purpose of improving the organization’s effectiveness" \parencite{Jennex2006WhatIsKM}. KMS in the end can be defined as "IT-based systems developed to support and enhance the organizational processes of knowledge creation, storage/retrieval, transfer and application". Overall, we can conclude that KMS are systems that support the decision-making process e.g. in a company by managing and selectively providing knowledge to their users. Since KMS are by definition a specialized form of IS we can simply apply the ISSM to them.\\
-Following Jennex and Olfman we can extend the three quality factors to gain a better understanding
-of knowledge management success \parencite{Jennex2006}.\\
+Following \cite{Jennex2006} we can extend the three quality factors to gain a better understanding
+of knowledge management success.\\
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{knowledge_management_success.png}
     \caption{Knowledge management success model by Jennex & Olfman}
     \label{fig:enter-label}
 \end{figure}
-The \textit{System Quality} dimension extends to contain the \textit{technological resources}, \textit{KM form} and the \textit{KM level}. \textit{Technological resources} define the capability of an organization to develop, operate, and maintain KM. This includes all kinds of technical conditions like the amount of experience available to develop, operate and maintain the KM, the underlying network infrastructure or the databases to hold the data use in KM. The \textit{KM form} refers to the extent to which knowledge and knowledge management processes are computerized and integrated. This is important since computerized KM processes are more effective than analogue ones as they make knowledge accessible everywhere at any time through a simple to use interface. The \textit{KM level} in the end refers to the ability to influence current activities. \textit{Technological resources} and the \textit{KM form} are both enablers for the \textit{KM level} and serve as a technical foundation for the ability of the KMS to influence the decision-making process.\\\\
+The \textit{System Quality} dimension extends to contain the \textit{technological resources}, \textit{KM form} and the \textit{KM level} \parencite{Jennex2006}. \textit{Technological resources} define the capability of an organization to develop, operate, and maintain KM \parencite{Jennex2006}. This includes all kinds of technical conditions like the amount of experience available to develop, operate and maintain the KM, the underlying network infrastructure or the databases to hold the data use in KM. The \textit{KM form} refers to the extent to which knowledge and knowledge management processes are computerized and integrated \parencite{Jennex2006}. This is important since computerized KM processes are more effective than analogue ones as they make knowledge accessible everywhere at any time through a simple to use interface. The \textit{KM level} in the end refers to the ability to influence current activities \parencite{Jennex2006}. \textit{Technological resources} and the \textit{KM form} are both enablers for the \textit{KM level} and serve as a technical foundation for the ability of the KMS to influence the decision-making process.\\\\
 The \textit{Knowledge Quality· dimension} consists of three subsidiary factors too - the \textit{KM strategy/process}, the \textit{Richness} of the captured knowledge and the \textit{Linkages} among the knowledge components. The \textit{Knowledge strategy/process} factor is the basis for the two other factors and means looks at the organizational processes organizing the knowledge management and to which extend these processes are formalized. \textit{Richness} on the other hand evaluates the accuracy and timeliness of the knowledge itself - one could say it is the quality of the actual knowledge. Linkages refer to how accessible the knowledge is through things like knowledge and topic maps etc.\\\\
 The \textit{service quality} dimension determines if users of the KMS are provided with sufficient support to use the KMS effectively. It consists of three parts aswell. The \textit{management support} refers to the provision of adequate resources for the KM the organization aswell as the creation of knowledge-sharing organization culture by the organization's management. User KM service quality refers to the support provided by the user organization in order to train the users to use the KMS effectively. On the other hand the IS KM service quality refers to the support provided by the  IS organization to allow users to use the KM aswell as maintaining it. This includes the building, setup and maintaining the KM infrastructure ensuring availability, reliability and security of the KMS provided.\\\\
 All three dimensions - the \textit{system quality}, \textit{knowledge quality} and the \textit{service quality} influence similar to the original ISSS the \textit{Intention to use} as well as the \textit{User Satisfaction} and cause a \textit{net benefit} in the end. The KMS success model makes a small difference by replacing the actual usage with \textit{perceived benefit} to highlight the importance of the distinction between mandatory and voluntary use.
